--- a/index.css
+++ b/index.css
@@ -314,6 +314,9 @@ p{
 }
 /* ------------------------------------------------------------------ */
 @media (max-width:400px) {
+    body{
+    font-family: Arial, Helvetica, sans-serif;
+    }
     .img{
         width: 50px;
         height: 50px;
@@ -375,7 +378,7 @@ p{
     }
     .img-1{
         width: 100%;
-        height: 10px;
+        height: 100px;
         position: relative;
     }
     h4{
@@ -425,7 +428,7 @@ p{
         background-color:lightpink;
     }
     .container1{
-        width: 83px;
+        width: 78px;
         height: 250px;
         border: 2px solid grey;
         border-radius: 10px;
@@ -540,7 +543,7 @@ p{
     /* ------------------------------------------------------------- */
     .footer-container{
         width: 100%;
-        height: 300px;
+        height: 250px;
         background-color: rgb(201, 246, 187);
         margin-top: 10px;
         margin-left: -1px;
